--- a/Currencies/Support/en.lproj/Localizable.strings
+++ b/Currencies/Support/en.lproj/Localizable.strings
@@ -2,3 +2,7 @@
 "api-currencies_error-0" = "Something went wrong when parsing, please check your implementation";
 
 "currency-list-view-controller_title" = "Currencies";
+
+"error-alert_title" = "Error";
+"error-alert_message" = "Something went wrong, please check your internet and try again :)";
+"error-alert-button_title" = "Ok";
